2002-11-05  Emmanuel Beffara  <manu@beffara.org>

	* src/graphics/eps_gz.py, ...: Added automating extraction of
	bounding boxes from gzipped PostScript figures.

2002-11-04  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/minitoc.py, src/modules/minitoc-hyper.py, man/:
	Introduced minitoc support.

	* src/modules/README: Updated module interface documentation.

	* src/__init__.py (LogCheck.show_errors): Removed an invalid call
	to update_file that caused a crash in some cases.
	(Environment): Split the triggers for \input and \include to take
	care of multiple .aux files. Checked for arguments in the BibTeX
	triggers.

2002-10-15  Emmanuel Beffara  <manu@beffara.org>

	* rubber.spec.in, configure, setup.py, Makefile.in: Introduced RPM
	packaging rules.

2002-10-14  Emmanuel Beffara  <manu@beffara.org>

	* configure, setup.py, Makefile.in: Made the Pyhton interpreter a
	parameter in the setup, with a probed default value.

2002-10-12  Emmanuel Beffara  <manu@beffara.org>

	* Version 0.99.3 released.

	* setup.py, debian/: Updated the package descriptions.

	* src/graphics/, man/: Introduced XFig support.

2002-09-20  Emmanuel Beffara  <manu@beffara.org>

	* src/util.py: Introduced a parsing funtion for keyval-like
	parameter lists.

	* src/modules/graphics.py: Improved handling of \includegraphics,
	so that the "ext=.foo" option is now understood.

	* src/graphics/mpost.py: Bugfix in message display.

2002-09-12  Emmanuel Beffara  <manu@beffara.org>

	* src/cmd_info.py: Fixed some bugs that remained (in rubber-info's
	--deps action) since the class fusion (see 2002-09-05).

2002-09-11  Emmanuel Beffara  <manu@beffara.org>

	* src/cmd_info.py, src/info.py, man/: Introduced the actions
	--refs and --warnings in rubber-info.

2002-09-06  Emmanuel Beffara  <manu@beffara.org>

	* Version 0.99.2 released.

	* setup.py, debian/control: Updated the package descriptions.

	* src/__init__.py (LogCheck.update_file): Fixed a bug that might