@@ -17,9 +17,6 @@ Improvements:
 - let modules that need external programs look for them and fail to load if
   these program are not found
 
-- rewrite the method execute in class Environment in a cleaner way without
-  using os.popen3, to allow both redirecting I/O and getting a return code
-
 - specify clearly what kind of messages each verbosity level is for
 
 - study the status of the Message class and the way to change the output
